2000-08-30  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkmarshal.list: Add marshallers for changed GtkTextBuffer
	signals.

	* gtk/gtktextbuffer.h: Add "interactive" arg to insert_text and
	delete_text signals. This allows the signals to be used for
	implementing undo.

	* gtk/gtktextbuffer.c: Change signal handler signatures; 
	provide "interactive" argument when emitting insert_text or
	delete_text signal.
	
2000-08-30  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextbuffer.c: Docs

Fri Aug 25 12:16:15 2000  Owen Taylor  <otaylor@redhat.com>

        * gdk/x11/gdkimage-x11.c: remove GDK_IMAGE_SHARED_PIXMAP
	from switch statements, since Tor removed the enumeration
	value.
	
	* gdk/x11/gdkimage-x11.c (gdk_image_get): 
	s/GDK_IS_WINDOW/GDK_IS_DRAWABLE/.

2000-08-29 Elliot Lee <sopwith@redhat.com>
	* */*.h: Use G_GNUC_CONST.

2000-08-27  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextiter.c, gtk/gtktextiter.h: wrote lots of API docs,
	minor indentation fixes, inserted some FIXME about stuff I
	realized was broken while documenting it.
	(gtk_text_iter_get_pixmap): allow out params to be NULL, following
	GTK convention	

Tue Aug 22 12:33:24 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/testgtk.c (create_styles): Fix double free of
	font desc.

Mon Aug 21 22:39:18 2000  Owen Taylor  <otaylor@redhat.com>

        * gtk/gtkwidget.[ch]: Add gtk_widget_modify_{fg,bg,text,base,font}.
	
	* gtk/testgtk.c (create_styles): Add a test for modifying
	the style through gtk_widget_modify_*.

	* gtk/gtkwidget.c (gtk_widget_get_modifier_style): Add
	a function to get the current modifier style.

	* gtk/gtkwidget.c (gtk_widget_modify_style): Make a copy
	of the passed in GtkRcStyle instead of ref'ing it.

	* gtk/gtkrc.[ch]: Add gtk_rc_style_copy().

2000-08-20  Tor Lillqvist  <tml@iki.fi>

	* gdk/gdkimage.h
	* gdk/win32/gdkimage-win32.c: No need any longer on Win32 for the
	shared memory image+pixmap GdkImage type, or